# tq3-ascend-port

./: .gitignore  CMakeLists.txt  README.md
ascend-c-kernel/: README.md  op_desc.json
ascend-c-kernel/src/: tq3_dequant_host.cpp  tq3_dequant_kernel.cpp
examples/: compile_and_test.sh
ggml-cann-integration/: tq3_cann.cpp  tq3_cann.h  tq3_cann_kernels.h
patches/: 0001-add-tq3-cann-backend.patch  apply.sh
reference/: TQ3_ALGORITHM.md  ggml_cann_tq3_integration.cpp
tests/: test_tq3_cann_integration.cpp  test_tq3_dequant.cpp
